# blueprint-agent

./: Dockerfile  buildspec.yml  pyproject.toml
agent/: agent.py  deploy.py  main.py  memory.py  prompt_example_ltm.py  prompt_example_stm.py  prompt_example_stm_ltm.py
agent/config/: config.json  config_dto.py  guardrails.json  guardrails_dto.py  prompt.txt  prompt_management.json  prompt_management_dto.py  read_config.py  read_guardrails.py  read_prompt_management.py
terraform/: config-tf.json  main.tf  outputs.tf  variables.tf  versions.tf
