[project]
name = "<<TODO>>"
version = "0.1.0"
description = "<<TODO>>"
requires-python = "~=3.12.0"

dependencies = [
    "strands-agents>=0.8.0",
    "bedrock-agentcore",
    "boto3",
    "aws-opentelemetry-distro==0.12.2",
]

#By default, index-url already points at PyPI. 
[tool.uv]
index-url = "https://pypi.org/simple"
